# tofang

./: .clang-tidy  .clangd  ToDo.md  main.cpp  main.to  meson.build  setup_mingw.bat
include/: ast.h  ast_base.h  compiler.h  decl.h  decl_type.h  irctx.h  lexer.h  parser.h  symbols.h  territory.h  territory_ast.h  type.h  typechecker.h  typeresolver.h
src/: ast.cpp  ast_gen.cpp  compiler.cpp  decl.cpp  lexer.cpp  parser.cpp  symbols.cpp  territory.cpp  type.cpp  typechecker.cpp  typeresolver.cpp
